src/test/ui/async-await/large_moves.stderr
error: moving 10024 bytes
  --> $DIR/large_moves.rs:7:13
   |
LL |       let x = async {
   |  _____________^
LL | |         let y = [0; 9999];
LL | |         dbg!(y);
LL | |         thing(&y).await;
LL | |         dbg!(y);
LL | |     };
   | |_____^ value moved from here
   |
note: the lint level is defined here
  --> $DIR/large_moves.rs:1:9
   |
LL | #![deny(large_assignments)]
   |         ^^^^^^^^^^^^^^^^^

error: moving 10024 bytes
  --> $DIR/large_moves.rs:13:14
   |
LL |     let z = (x, 42);
   |              ^ value moved from here

error: moving 10024 bytes
  --> $DIR/large_moves.rs:13:13
   |
LL |     let z = (x, 42);
   |             ^^^^^^^ value moved from here

error: moving 10024 bytes
  --> $DIR/large_moves.rs:15:13
   |
LL |     let a = z.0;
   |             ^^^ value moved from here

error: aborting due to 4 previous errors

